--- a/prepros.config
+++ b/prepros.config
@@ -890,6 +890,12 @@
         "config": {
           "autoCompile": true
         }
+      },
+      {
+        "file": "scss/structure.scss",
+        "config": {
+          "compileImported": true
+        }
       }
     ]
   }
