--- a/prepros.config
+++ b/prepros.config
@@ -892,6 +892,12 @@
         }
       },
       {
+        "file": "scss/contact.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "scss/structure.scss",
         "config": {
           "compileImported": true
