--- a/prepros.config
+++ b/prepros.config
@@ -898,6 +898,12 @@
         }
       },
       {
+        "file": "scss/info.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "scss/structure.scss",
         "config": {
           "compileImported": true
